client/landing/gutenboarding/components/domain-picker-modal/style.scss
@import 'assets/stylesheets/gutenberg-base-styles';
@import '../../mixins.scss';

.domain-picker-modal-overlay {
	// Absolute positioning allows the modal
	// to reuse the <body> element's scrollbar.
	position: absolute;

	// This positions the domain picker modal
	// right below the gutenboarding header,
	// keeping the header clickable.
	top: $gutenboarding-header-height;
	left: 0;

	// Using min-height lets the overlay cover
	// the entire viewport ensuring nothing behind
	// it can be seen.
	//
	// When the domain picker's content is taller
	// than the viewport height, it will expand taller
	// than the provided min-height, triggering
	// the appearance of the <body> element's scrollbar.
	min-height: calc( 100vh - #{$gutenboarding-header-height} );
	width: 100%;

	background: var( --studio-white );
}

.domain-picker-modal {

	.domain-picker__panel-row-main {

		// Replace domain picker's padding with onboarding block margins
		padding: 0;

		// Increase specificity to override margin: 0 from .components-panel__row
		&.components-panel__row {
			@include onboarding-block-margin;
			padding-bottom: 27px;
		}
	}

	.domain-picker__header {
		@include onboarding-heading-padding;
		margin-bottom: 27px; // Maintain the same 27px bottom margin as in the original domain picker

		@include break-mobile {
			margin-bottom: 27px;
		}
	}

	.domain-picker__header-title {
		@include onboarding-heading-text-mobile;

		@include break-mobile {
			@include onboarding-heading-text;
		}
	}

	// Do not display domain picker footer which contains
	// the confirm button when showing inside a modal.
	.domain-picker__panel-row-footer {
		display: none;
	}

	// Show confirm button on fixed footer on mobile view
	@media ( max-width: $break-mobile ) {

		.domain-picker__header .domain-picker__confirm-button {
			display: none;
		}

		.domain-picker__footer {
			flex-direction: row-reverse;
		}

		.domain-picker__panel-row-footer {
			display: block;
			position: fixed;
			width: 100%;
			bottom: 0;
			background: var( --studio-white );
		}

		// Space to accomodate sticky footer
		.domain-picker__panel-row-main {
			&.components-panel__row {
				margin-bottom: 85px;
			}
		}
	}

	.domain-picker__search {
		margin-bottom: 60px;

		// Search input is taller when inside a modal.
		input[type='text'].components-text-control__input {
			height: 44px;
		}

		svg {
			top: 9px;
			right: 12px;
		}

		// To accomodate domain category dropdown
		@media ( max-width: $break-mobile ) {
			margin-bottom: 8px;
		}
	}

	// Don't show close button & more button when inside a modal.
	.domain-picker__close-button,
	.domain-picker__more-button {
		display: none;
	}

	// Increase specificity
	.components-panel__row {

		.domain-picker__suggestion-item {
			border: 1px solid var( --studio-gray-5 );
			padding: 14px;
			margin-bottom: 0;

			+ .domain-picker__suggestion-item {
				margin-top: -1px;
			}
		}
	}
}

// Hide onboarding block when domain picker modal is open
body.has-domain-picker-modal {
	.onboarding-block {
		display: none;
	}
}

